--- a/blocks/flow/src/scss/style/helpers/_variables.scss
+++ b/blocks/flow/src/scss/style/helpers/_variables.scss
@@ -131,6 +131,7 @@
   --rw-flow-lh-32: 32px;
 }
 
+$rw-flow-wp-sm-breakpoint:400px;
 $rw-flow-wp-breakpoint: 782px;
 $rw-flow-wp-md-breakpoint: 960px;
 $rw-flow-wp-lg-breakpoint: 1200px;
